--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
 	<form id="searchForm">
     <!-- TODO: add form elements -->
+	<label><input type="text" name="q" placeholder="Enter your search query" required></label>
+    <label><input type="radio" name="engine" value="google"> Google</label>
+    <label><input type="radio" name="engine" value="duckDuckGo"> DuckDuckGo</label>
+    <label><input type="radio" name="engine" value="bing"> Bing</label>
+    <label><input type="radio" name="engine" value="ask"> Ask</label>
+    <button type="submit">Go!</button>
 	</form>
 
 </body>
